Bug 480911 - Night light is not applied after turning off the screen
Summary: Night light is not applied after turning off the screen
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.93.0
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-02-05 17:30 UTC by daron439
Modified: 2024-02-07 23:01 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description daron439 2024-02-05 17:30:40 UTC
SUMMARY
Night light is not applied after turning off & on the screen

STEPS TO REPRODUCE
1. dbus-send --session --print-reply --dest=org.kde.kglobalaccel  /component/org_kde_powerdevil org.kde.kglobalaccel.Component.invokeShortcut string:'Turn Off Screen'
2. Turn on the screen (by moving the mouse)

OBSERVED RESULT
Night light is off(just visually, it's on in the settings)

EXPECTED RESULT
Night light works after turning off & turning on the screen.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.93.0
KDE Frameworks Version:  5.249.0
Qt Version:  6.6.0

ADDITIONAL INFORMATION
proprietary NVIDIA  550.40.07
Comment 1 Bug Janitor Service 2024-02-07 19:39:02 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/5140
Comment 2 Zamundaaa 2024-02-07 22:50:25 UTC
Git commit 83fe158a1637083482435fc3c15f9a988cf59e11 by Xaver Hugl.
Committed on 07/02/2024 at 19:49.
Pushed by zamundaaa into branch 'master'.

backends/drm: fix night light updates after dpms
FIXED-IN: 6.0

M  +1    -0    src/backends/drm/drm_output.cpp
M  +0    -5    src/colors/colordevice.cpp

https://invent.kde.org/plasma/kwin/-/commit/83fe158a1637083482435fc3c15f9a988cf59e11
Comment 3 Zamundaaa 2024-02-07 23:01:34 UTC
Git commit 43f223afe2e894a47eb9f015381bcc161273797b by Xaver Hugl.
Committed on 07/02/2024 at 22:50.
Pushed by zamundaaa into branch 'Plasma/6.0'.

backends/drm: fix night light updates after dpms
FIXED-IN: 6.0


(cherry picked from commit 83fe158a1637083482435fc3c15f9a988cf59e11)

M  +1    -0    src/backends/drm/drm_output.cpp
M  +0    -5    src/colors/colordevice.cpp

https://invent.kde.org/plasma/kwin/-/commit/43f223afe2e894a47eb9f015381bcc161273797b