backends/drm: fix night light updates after dpms

BUG: 480911
FIXED-IN: 6.0


(cherry picked from commit 83fe158a1637083482435fc3c15f9a988cf59e11)